[package]
name = "socket-filter"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "1.0"
redbpf-probes = "1.0"
redbpf = { version = "1.0", features = ["load"] }
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3.5"
clap = "2.33.1"
chrono = "0.4.13"

[build-dependencies]
cargo-bpf = "1.0"

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "filter"
path = "src/bin/kern.rs"
required-features = ["probes"]

[[bin]]
name = "example"
path = "src/bin/user.rs"
